--- a/src/app/directives/toolbar/toolbar.scss
+++ b/src/app/directives/toolbar/toolbar.scss
@@ -348,7 +348,7 @@ md-menu-bar {
     padding-right: 25px;
 }
 
-.show_loading {
+.show_loading, .success_popup {
     position: fixed;
     top: 0;
     left: 0;
