Qloudable text replaced to IOT

--- a/src/app/directives/toolbar/toolbar.view.html
+++ b/src/app/directives/toolbar/toolbar.view.html
@@ -2,7 +2,7 @@
     <md-toolbar>
         <div class="md-toolbar-tools">
             <span class="logo_image logo_image_icon" ui-sref="chooseLayout">
-                <img src="./img/logo.png" alt="Qualdable Logo" width="114px" height="50px" />
+                <img src="./img/logo.png" alt="IOT Logo" width="114px" height="50px" />
             </span>
             <span flex></span>
             <!--<div layout="row" style="position: relative;" ng-if="!vm.publicPath || vm.showUser">
