--- a/src/app/directives/toolbar/toolbar.scss
+++ b/src/app/directives/toolbar/toolbar.scss
@@ -133,8 +133,8 @@ md-toolbar input {
     img {
         margin: 0 1px;
         max-width: 80px;
-        height: auto;
-        width: 100%;
+        /*  height: auto;
+        width: 100%;*/
     }
     &.maxWidth100px {
         img {
@@ -348,7 +348,8 @@ md-menu-bar {
     padding-right: 25px;
 }
 
-.show_loading, .success_popup {
+.show_loading,
+.success_popup {
     position: fixed;
     top: 0;
     left: 0;
