--- a/src/app/components/chooseLayout/chooseLayout.scss
+++ b/src/app/components/chooseLayout/chooseLayout.scss
@@ -2,8 +2,7 @@
     padding: 60px 35px 0;
 }
 
-.message-info,
-.close_info {
+.message-info {
     width: 35px;
     height: 35px;
     text-align: center;
@@ -14,29 +13,75 @@
     position: fixed;
     right: 10px;
     top: 7px;
-    z-index: 99;
+    z-index: 111;
     color: #fff;
 }
 
-.close_info {
-    top: 12px;
+.overlay_box {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    background: rgba(0, 0, 0, 0.4);
+    z-index: 9999;
+    .close_info {
+        width: 35px;
+        height: 35px;
+        text-align: center;
+        padding: 5px 0px;
+        border-radius: 50%;
+        background: #0E96D1;
+        cursor: pointer;
+        position: fixed;
+        right: 10px;
+        top: 7px;
+        z-index: 111;
+        color: #fff;
+    }
+    .user-info {
+        position: absolute;
+        top: 5px;
+        padding: 0px;
+        right: 9px;
+        width: 370px;
+        min-height: 200px;
+        background: #fff;
+        border-radius: 0px 0px 5px 5px;
+        border: 1px solid #e2e2e2;
+        z-index: 123;
+        .info-header {
+            border-bottom: 1px solid #e2e2e2;
+            padding: 10px 30px 10px 10px;
+            font-size: 16px;
+            background: #0e96d1;
+            color: #fff;
+            span {
+                font-size: 12px;
+                font-style: italic;
+                margin: 0px 5px;
+            }
+        }
+        .message_text {
+            padding: 10px 10px 20px;
+            height: 500px;
+            overflow: auto;
+            p {
+                margin: 0px 0px 20px;
+                font-size: 15px;
+                line-height: 26px;
+            }
+        }
+    }
 }
 
-.user-info {
-    position: absolute;
-    top: 7px;
-    padding: 0px;
-    right: 9px;
-    width: 370px;
-    min-height: 200px;
-    background: #fff;
-    border-radius: 5px;
-    border: 1px solid #e2e2e2;
-    z-index: 999;
+.custom_dialog {
+    .md-dialog-container {
+        background: rgba(0, 0, 0, 0.3);
+        z-index: 9999;
+    }
     .info-header {
         border-bottom: 1px solid #e2e2e2;
-        padding: 10px 30px 10px 10px;
-        font-size: 16px;
+        padding: 14px 30px 14px 10px;
+        font-size: 18px;
         background: #0e96d1;
         color: #fff;
         span {
@@ -47,13 +92,29 @@
     }
     .message_text {
         padding: 10px 10px 20px;
-        height: 500px;
+        font-size: 16px;
         overflow: auto;
         p {
             margin: 0px 0px 20px;
             font-size: 15px;
             line-height: 26px;
         }
+    }
+    .model_footer {
+        position: fixed;
+        bottom: 0px;
+        width: 100%;
+        text-align: right;
+    }
+    md-dialog:not(.md-default-theme) {
+        min-width: 50%;
+        min-height: 80%;
+        border-radius: 0px;
+        max-width: 50%;
+    }
+    .md-primary {
+        background-color: #0E96D1 !important;
+        text-transform: capitalize;
     }
 }
 
