--- a/src/app/directives/toolbar/toolbar.scss
+++ b/src/app/directives/toolbar/toolbar.scss
@@ -165,7 +165,7 @@ md-toolbar input {
     img {
         width: 100%;
         height: 100%;
-        @include border-radius(50%);
+        border-radius: 50%;
         border: none;
         border-image-width: 0px;
     }
