landing page model issue

--- a/src/app/components/view/view.scss
+++ b/src/app/components/view/view.scss
@@ -887,7 +887,7 @@ md-nav-bar md-nav-ink-bar {
     display: none;
     .response_message {
         max-width: 500px;
-        width: 500%;
+        width: 500px;
         min-height: 240px;
         background: #fff;
         height: auto;
