--- a/src/app/components/view/view.html
+++ b/src/app/components/view/view.html
@@ -315,7 +315,7 @@
 </div>
 <div class="success_popup" ng-if="vm.submitResp">
     <div class="response_message simulate_response" layout="row" layout-align="center center">
-        <div class="response_text" ng-if="vm.smilulateScuccess" felx>
+        <div class="response_text" felx>
             <i class="material-icons">check_circle</i>
             <p class="text simulate_text">Great! You have successfully simulated the sensors collecting environmental data from a physical location.</p>
             <p class="text simulate_text">At this point, the data should now be available in the EMS monitoring and analysis application. Go there now to view this data and see how you can track energy consumption in real-time using an IoT framework.</p>
